kubernetes/server/1-assembler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assembler-service
  namespace: default
  labels:
    app: assembler-service

spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: assembler-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assembler-service
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: assembler-service
  template:
    metadata:
      labels:
        app: assembler-service
    spec:
      containers:
        - name: assembler
          image: assembler-service:local
          ports:
            - containerPort: 80
              name: http
