kubernetes/server/1-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  labels:
    app: web-service

spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: web-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
        - name: web
          image: registry.jahiduls.mint/web-service:local
          ports:
            - containerPort: 80
              name: http
