kubernetes/server/3-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: page-service
  namespace: default
  labels:
    app: page-service

spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: page-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: page-service
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: page-service
  template:
    metadata:
      labels:
        app: page-service
    spec:
      containers:
      - name: page
        image: registry.jahiduls.mint/page-service:local
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
