kubernetes/server/4-content-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-service
  namespace: default
  labels:
    app: content-service

spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: content-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service
  template:
    metadata:
      labels:
        app: content-service
    spec:
      containers:
      - name: content
        image: content-service:local
        ports:
        - containerPort: 80
          name: http
