kubernetes/server/4-layout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: layout-service
  namespace: default
  labels:
    app: layout-service

spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: layout-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: layout-service
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: layout-service
  template:
    metadata:
      labels:
        app: layout-service
    spec:
      containers:
      - name: layout
        image: registry.jahiduls.mint/layout-service:local
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
