kubernetes/server/6-widget-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: widget-service
  namespace: default
  labels:
    app: widget-service

spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: widget-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: widget-service
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: widget-service
  template:
    metadata:
      labels:
        app: widget-service
    spec:
      containers:
      - name: widget
        image: registry.jahiduls.mint/widget-service:local
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
