kubernetes/server/0-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jahiduls.kube`)
      kind: Rule
      services:
        - name: web-service
          port: 80
    - match: Host(`jahiduls.kube`) && PathPrefix(`/widgets`)
      kind: Rule
      services:
        - name: common-widgets
          port: 80
      middlewares:
        - name: stripprefix-widgets
    - match: Host(`jahiduls.kube`) && PathPrefix(`/modules`)
      kind: Rule
      services:
        - name: common-modules
          port: 80
      middlewares:
        - name: stripprefix-modules

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-widgets
  namespace: default

spec:
  stripPrefix:
    prefixes:
      - /widgets

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-modules
  namespace: default

spec:
  stripPrefix:
    prefixes:
      - /modules
