kubernetes/server/0-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  labels:
    app: web-service

spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: web-service

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: TraefikService
# metadata:
#   name: web-service
#   namespace: default
#   labels:
#     app: web-service

# spec:
#   weighted:
#     services:
#       - name: web-service
#         weight: 1
#         port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
        - name: web
          image: registry.jahiduls.mint/web-service:local
          ports:
            - containerPort: 80
              name: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jahiduls.kube`)
      kind: Rule
      services:
        - name: web-service
          port: 80
    - match: Host(`jahiduls.kube`) && PathPrefix(`/widgets`)
      kind: Rule
      services:
        - name: common-widgets
          port: 80
      middlewares:
        - name: stripprefix-widgets

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-widgets
  namespace: default

spec:
  stripPrefix:
    prefixes:
      - /widgets
